syntax = "proto3";

/* from project directory compile this as follows:
 * protoc --java_out=src/main/java/ protos/msg.proto
 */

option java_package = "model";
option java_outer_classname = "MsgInfo";

message Message {
  srcType type = 1;
  string srcId = 2;
  string topic = 3;
  bytes data = 4;
  int32 offset = 5;
  int32 startingPosition = 6;
  int32 msgId = 8;
  bool isSnapshot = 9;

  enum srcType {
    PRODUCER = 0;
    BROKER = 1;
    CONSUMER = 2;
    ACK = 3;
    SNAPSHOT = 4;
  }
}